# FretNinja3

./: .gitignore  Cargo.toml
src/: fretboard_screen.rs  info_screen.rs  instrument.rs  main.rs  note.rs  screen.rs
src/instrument/: instrument.rs
src/util/: instrument.rs  mod.rs  note.rs
