[package]
name = "FretNinja"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.4.3"
dioxus-web = "0.4.3"
dioxus-desktop = "0.4.3"
dioxus-core = "0.4.3"
dioxus-html = "0.4.3"
strum = "0.23.0"
strum_macros = "0.23.0"
async-std = "1.10.0"
tokio = { version = "1.35.0", features = ["full"] }
shipyard = "0.6.2"